--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
     
     <meta property="og:image" content="Addons/minecraft.jpg">
     <link rel="stylesheet" href="Addons/styles.css">
+    <link rel="icon" type="image/png" href="logo.png">
+
 </head>
+<!-- Add this section right after the opening <body> tag -->
+    <header class="announcement-banner">
+        <div class="announcement-content">
+            <div class="announcement-text">
+                <span class="pulse-dot"></span>
+                <span class="text-white">Now Hiring:</span>
+                <span class="text-gold">Developers & Administrators</span>
+            </div>
+            <a href="jobs.html" class="announcement-button">
+                Apply Now
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+            </a>
+        </div>
+    </header>
 <body>
     <!-- Hero Section -->
     <div class="hero">
@@ -186,6 +202,12 @@
                 e.preventDefault();
             }
         });
+
+
+        if (window.location.pathname.endsWith(".html")) {
+    window.history.replaceState(null, "", window.location.pathname.replace(".html", ""));
+}
+
     </script>
 </body>
 </html>
