--- a/jobs.html
+++ b/jobs.html
@@ -326,7 +326,7 @@
                     <li>Knowledge of server management tools</li>
                     <li>Available during peak server hours</li>
                 </ul>
-                <a href="#apply" class="button primary">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0f3SobmHwT9_QaTPz6gd1Fxze21TGGHaNupqkqE72XJdNbA/viewform?usp=sharing" class="button primary">
                     Apply Now
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
                 </a>
