--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StrategyMC - Minecraft Server</title>
-    <meta name="description" content="Join StrategyMC, the ultimate Minecraft server for PvP enthusiasts! 
+    <title>SqlixMC - Minecraft Server</title>
+    <meta name="description" content="Join SqlixMC, the ultimate Minecraft server for PvP enthusiasts! 
     Get ready for intense battles in various game modes, including Bedwars, Practice, and RPvP. 
     Enjoy balanced combat mechanics, stunning maps, and unique systems that make every fight exciting and challenging. 
-    Whether you're a seasoned warrior or looking to sharpen your skills, StrategyMC provides the perfect environment for competition and fun. 
+    Whether you're a seasoned warrior or looking to sharpen your skills, SqlixMC provides the perfect environment for competition and fun. 
     Join us now and embark on an epic adventure in the world of Minecraft!">
     
     <meta property="og:image" content="Addons/minecraft.jpg">
@@ -34,7 +34,7 @@
     <div class="hero">
         <div class="hero-content">
             <h1>
-                <span class="text-gold">StrategyMC</span>
+                <span class="text-gold">SqlixMC</span>
                 <span class="text-white">Newtork</span>
             </h1>
             <p class="hero-description">
@@ -125,7 +125,7 @@
             </div>
         </div>
 
-        <a href="https://dsc.gg/strategymc" class="button primary discord-button" target="_blank">
+        <a href="https://dsc.gg/sqlixmc" class="button primary discord-button" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
             Join Discord
         </a>
@@ -149,7 +149,7 @@
                 <h3>Add Server</h3>
                 <p>Click 'Multiplayer' → 'Add Server' and enter our server address</p>
                 <div class="server-address" onclick="copyServerAddress()" oncontextmenu="return false">
-                    <code>play.strategymc.xyz</code>
+                    <code>play.sqlixmc.com</code>
                     <div class="copy-success" id="copySuccess">Server address copied!</div>
                 </div>
             
@@ -180,13 +180,13 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 StrategyMC. Not affiliated with Mojang AB.</p>
+        <p>© 2024 SqlixMC. Not affiliated with Mojang AB.</p>
     </footer>
 
 
     <script>
         function copyServerAddress() {
-            const serverAddress = 'play.strategymc.xyz';
+            const serverAddress = 'play.sqlixmc.com';
             navigator.clipboard.writeText(serverAddress).then(() => {
                 const successMsg = document.getElementById('copySuccess');
                 successMsg.classList.add('show-success');
