--- a/jobs.html
+++ b/jobs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StrategyMC Jobs - Join Our Team</title>
+    <title>SqlixMC Jobs - Join Our Team</title>
     <style>
         * {
             margin: 0;
@@ -271,7 +271,7 @@
         <div class="hero-content">
             <p class="hero-title text-gold">Join Our Team</p>
             <h1 class="hero-subtitle">
-                <span class="text-gold">Strategy</span>
+                <span class="text-gold">Sqlix</span>
                 <span class="text-white">MC</span>
             </h1>
             <p class="hero-description">
@@ -358,7 +358,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 StrategyMC. Not affiliated with Mojang AB.</p>
+        <p>© 2024 SqlixMC. Not affiliated with Mojang AB.</p>
     </footer>
 
     <script>
