--- a/policies.html
+++ b/policies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StrategyMC - Server Policies</title>
+    <title>SqlixMC - Server Policies</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -125,10 +125,10 @@
 <body>
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">StrategyMC</h1>
+            <h1 class="hero-title">SqlixMC</h1>
             <h2 class="hero-subtitle">Server Policies</h2>
             <p class="hero-description">
-                By accessing and using the StrategyMC server, you agree to comply with the following policies. These policies are designed to ensure a safe and enjoyable experience for all players.
+                By accessing and using the SqlixMC server, you agree to comply with the following policies. These policies are designed to ensure a safe and enjoyable experience for all players.
             </p>
         </div>
     </section>
@@ -215,7 +215,7 @@
     
         </script>
     <footer>
-        <p>© 2025 StrategyMC. All rights reserved.</p>
+        <p>© 2025 SqlixMC. All rights reserved.</p>
     </footer>
 </body>
 </html>
