--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StrategyMC - Server Rules</title>
+    <title>SqlixMC - Server Rules</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -123,10 +123,10 @@
 <body>
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">StrategyMC</h1>
+            <h1 class="hero-title">SqlixMC</h1>
             <h2 class="hero-subtitle">Server Rules</h2>
             <p class="hero-description">
-                By joining the StrategyMC server, you agree to abide by the following rules. Failure to comply may result in penalties, including bans or blacklisting.
+                By joining the SqlixMC server, you agree to abide by the following rules. Failure to comply may result in penalties, including bans or blacklisting.
             </p>
         </div>
     </section>
@@ -205,7 +205,7 @@
     </script>
     
     <footer>
-        <p>© 2025 StrategyMC. All rights reserved.</p>
+        <p>© 2025 SqlixMC. All rights reserved.</p>
     </footer>
 </body>
 </html>
